# arduino-tdd-starter

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  GameOfLifeTdd.ino  Makefile  README.md  deploy.py
mock/: Adafruit_NeoPixel.h  Adafruit_NeoPixelMock.cpp  Arduino.h  mockArduino.c
src/: abstractDisplayAdapter.hpp  consoleDisplayAdapter.cpp  consoleDisplayAdapter.hpp  gameOfLife.c  gameOfLife.h  neighbor_counter.h  neopixel_adapter.h  render.c  render.h  serpintineNeopixelStripDisplayAdapter.cpp  serpintineNeopixelStripDisplayAdapter.hpp  system.cpp  system.h
src/hardware/: files.txt
test/: .gitignore  CMakeLists.txt  Makefile  support.cpp  support.hpp  test_consoleDisplayAdapter.cpp  test_grid.cpp  test_neopixel_adapter.cpp  test_oscillator.cpp  test_random.cpp  test_randomSeed.cpp  test_rules.cpp  test_serpentineNeopixelStripDisplayAdapter.cpp  testdefault.cpp
